project(toggle-backslash-in-clipboard)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
include_directories(. "$ENV{envvarpath_sdl}/include/" "$ENV{envvarpath_cpprs}")
link_directories("$ENV{envvarpath_sdl}/lib/x64/")
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} SDL2 SDL2main)
